log
Thu 07 Sep 2023 05:29:06 PM UTC: 
 tests:  0|6
total_score: 0/70
e089429
Thu 07 Sep 2023 05:34:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:12: error: unused variable ‘map’ [-Werror=unused-variable]
   55 |   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
674ed49
Thu 07 Sep 2023 05:37:59 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5670af6
Thu 07 Sep 2023 05:39:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e7a2304
